# sync-kpis-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  TASKLIST.md  dev.db  docker-compose.yml  dockerfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: database.py  deps.py  main.py  models.py  schemas.py
app/routers/: __init__.py  auth_router.py  kpis_router.py  products_router.py  receipts_router.py  shops_router.py
app/utils/: security.py
docs/: DEVELOPMENT_NOTES.md
tests/: test_auth_flow.py  test_kpis.py  test_receipts_idempotency.py  test_smoke.py
