[project]
name = "sync-kpis-api"
version = "0.1.0"
description = "Backend genérico para órdenes y KPIs con FastAPI y SQL."
authors = [
  { name = "Raúl Jiménez" }
]
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "pydantic[email]>=2",
  "python-jose[cryptography]",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.0.0",
  "pymysql",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "pre-commit",
  "httpx"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "T201"]

[tool.pytest.ini_options]
addopts = "-q"